[package]
name = "taskmaster"
version = "0.2.1"
edition = "2021"

[dependencies]
rand = "0.9.0"
image = "0.24.7"
webp = "0.2.6"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
